# file-organizer

./: .gitignore  BENCHMARK_FINAL_RESULTS.md  BENCHMARK_RESULTS.md  CHADD_RESEARCH_POSITIONING.md  CONTRIBUTING.md  CREATIVE_STUDIO_POSITIONING.md  ERATOSTHENES_ACTION_GUIDE.md  ERATOSTHENES_GUIDE.md  FILE_ORGANIZER_README.md  LICENSE  ORIGIN_STORY.md  PERFORMANCE_TIPS.md  PRACTICAL_WORKFLOW.md  README.md  RELEASE_v1.1.0.md  WORKFLOW_BEST_PRACTICES.md  benchmark_ai_providers.py  pyproject.toml  setup.py  test_eratosthenes.py
.github/workflows/: python-package.yml
docs/: MIGRATION_GUIDE.md  NETWORK_DRIVES.md
file_organizer/: __init__.py
file_organizer/ai/: __init__.py  cache.py  metrics.py  unified_client.py
file_organizer/ai/providers/: anthropic_client.py  gemini_client.py  grok_client.py  ollama_client.py  openai_client.py
file_organizer/ai/skills/: __init__.py  integration.py  library_science.py  manager.py  skill.py
file_organizer/cli/: __init__.py  main.py
file_organizer/config/: __init__.py  loader.py  schema.py
file_organizer/config/examples/: ai_config.yaml  filetype.yaml  rule_based.yaml
file_organizer/core/: __init__.py  operations.py  organizer.py  strategy.py
file_organizer/strategies/: __init__.py  ai_suggested.py  filetype.py  rule_based.py
file_organizer/utils/: __init__.py  ai_advisory.py  duplicates.py  index.py  metadata_extractor.py  mounts.py  reporting.py  taxonomy_manager.py
